<resources>
    <string name="app_name">ZoomLion</string>
    <string name="describe">数据采集</string>
    <string name="Camerahit">开始拍照</string>
    <string name="finsh">返回</string>
    <string name="agin">继续拍摄</string>
    <string name="nothing"></string>
    <string name="imagename">照片名</string>
    <string name="save">保存</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">\t 用户名</string>
    <string name="prompt_password">\t 密码</string>
    <string name="terminal">\t 测量终端</string>
    <string name="action_sign_in">登\t \t \t 陆</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">用户名不合法！！</string>
    <string name="error_empty_password">密码不能为空！！</string>
    <string name="error_incorrect_password">密码错误！！</string>
    <string name="error_length_password">密码长度不合法！！</string>
    <string name="error_field_required">名字不能为空！！</string>
    <string name="copyright">Copyright 2017 Zoomlion Heavy Industry Science&amp;Technology Co., Ltd. All rights reserved. </string>
    <string name="error_no_terminal">未选择测量终端</string>
    <!--应用引导页-->
    <string name="index_welcome_user">你好，%1$s，欢迎使用！！上次登陆时间：%2$s</string>

    <!--项目记录细节展示页-->
    <string name="item_detail_tv_name">项目名称：</string>
    <string name="detail_tv_header">记录详情展示</string>
    <string name="detail_tv_create_date">时间：</string>
    <string name="detail_tv_header_pic">图片数据</string>
    <string name="detail_tv_header_result">值数据</string>
    <string name="detail_tv_header_chart">谱图数据</string>
    <string name="detail_tv_item_novalue">该项目无数值参数</string>
    <string name="detail_tv_item_nopic">该项目无图片参数</string>
    <string name="check_home_admin_desc">管理员在提交整机调试记录时需要在此添加说明</string>

    <!--权限请求相关-->
    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>

    <string-array name="permissions">
        <item>@string/permission_recode_audio_hint</item>
        <item>@string/permission_get_accounts_hint</item>
        <item>@string/permission_read_phone_hint</item>
        <item>@string/permission_call_phone_hint</item>
        <item>@string/permission_camera_hint</item>
        <item>@string/permission_access_fine_location_hint</item>
        <item>@string/permission_access_coarse_location_hint</item>
        <item>@string/permission_read_external_hint</item>
        <item>@string/permission_white_external_hint</item>
    </string-array>

    <string name="item_instructions_record">
        \n\n
        \t\t 服务器记录次数：%1$d 次 \n\n
        \t\t 本机调试次数：%2$d 次 \n\n
        \t\t 判定合格次数：%3$d 次 \n\n
        \t\t 调试项目结论：%4$s
    </string>
    <string name="item_instructions_vo">
        \n\n
        \t\t 调试超时时间：%1$d s \n\n
        \t\t 谱图参数：%2$d 个  \n\n
        \t\t 谱图采集间隔：%3$d mm \n\n
        \t\t 调试参数数量：%4$d 个
    </string>
    <string name="view_record_check_times">
        第%1$d次调试
    </string>
    <string name="terminal_conn_status">终端连接%1$s</string>

</resources>
