<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:background="#000"
        android:layout_width="match_parent"
        android:layout_height="1dp" />
    <TextView
        android:id="@+id/tv_current_name"
        android:layout_margin="5dp"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:background="#000"
        android:layout_width="match_parent"
        android:layout_height="1dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">
        <RelativeLayout
            android:id="@+id/takephoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Camerabtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/Camerahit"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/imageshowlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/finsh" />
            <Button
                android:id="@+id/agin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/agin" />

            <ImageView
                android:id="@+id/photoshow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/agin"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/nothing"
                android:scaleType="centerCrop" />

            <Button
                android:text="保存"
                android:id="@+id/btn_save"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>