<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RadioGroup
        android:id="@+id/rg_params"
        android:layout_margin="5dp"
        android:background="@drawable/bg_rg"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </RadioGroup>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">
        <RelativeLayout
            android:id="@+id/takephoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Camerabtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/Camerahit"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/imageshowlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/finsh" />
            <Button
                android:id="@+id/agin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/agin" />

            <ImageView
                android:id="@+id/photoshow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/agin"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/nothing"
                android:scaleType="centerCrop" />


            <RadioGroup
                android:layout_below="@+id/photoshow"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:checked="true"
                    android:id="@+id/rb_pic"
                    android:text="保存原图"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/rb_zoom_pic"
                    android:text="保存简图"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:text="保存"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>