<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.kstech.zoomlion.view.activity.LoginActivity">

    <LinearLayout
        android:gravity="center"
        android:background="@drawable/ll_change_check_title_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <ImageView
            android:src="@drawable/header_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5">

        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center">

            <ProgressBar
                android:id="@+id/login_progress"
                style="@style/zoomLionProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.7" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.2"
                    android:orientation="horizontal">

                    <AutoCompleteTextView
                        android:id="@+id/tv_name"
                        style="@style/LoginText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/input_login_bg"
                        android:drawableLeft="@drawable/login_user"
                        android:hint="@string/prompt_email"
                        android:imeOptions="actionNext"
                        android:inputType="textAutoComplete"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.6" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.2">

                    <EditText
                        android:id="@+id/password"
                        style="@style/LoginText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/input_login_bg"
                        android:drawableLeft="@drawable/login_pass"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.6" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.2">

                    <TextView
                        android:id="@+id/terminal"
                        style="@style/LoginText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/input_login_bg"
                        android:drawableLeft="@drawable/login_terminal"
                        android:gravity="center_vertical"
                        android:hint="@string/terminal"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.5" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/email_sign_in_button"
                        style="@style/LoginBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/btn_login_bg"
                        android:text="@string/action_sign_in"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.8" />

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:background="#8c8c91"
        android:layout_weight="0.7"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:text="平板ID：121212"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:id="@+id/tv_pad_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:layout_centerInParent="true"
            android:textColor="#fff"
            android:text="@string/copyright"
            android:id="@+id/tv_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <!-- Login progress -->
</LinearLayout>
